Add future events extraction to prediction response
Introduces a new 'events' field in the PredictResponse schema to include future events that may affect energy demand. Implements async integration with OpenAI to fetch relevant events for the prediction period, and updates the prediction endpoint to return this information.

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ deployment/*.key
 /data/features/*
 tests/test_openai_analysis.py
 data/features/Atlantico/data_with_features_latest.csv
+tests/test_future_events.py
