--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ streamlit>=1.28.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.0.0
+openai>=1.12.0
+python-dotenv>=1.0.0
 
 # Utilities
 python-dateutil>=2.8.2
