--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ scipy>=1.11.0
 # Visualization (opcional, para análisis)
 plotly>=5.14.0
 streamlit>=1.28.0
-
+lightgbm==4.6.0
 # API Framework (para Fase 4)
 fastapi>=0.104.0
 uvicorn>=0.24.0
