--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,3 +3,12 @@ aptPkgs = ["libgomp1"]
 
 [variables]
 LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH"
+
+[phases.install]
+cmds = ["pip install -r requirements.txt"]
+
+[phases.build]
+cmds = ["echo 'Build complete'"]
+
+[start]
+cmd = "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT"
