--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,6 @@
+[providers]
+python = "3.11"
+
 [phases.setup]
 aptPkgs = ["libgomp1"]
 
@@ -5,10 +8,11 @@ aptPkgs = ["libgomp1"]
 LD_LIBRARY_PATH = "/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH"
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
+nixPkgs = { python = "3.11" }
+cmds = [
+    "pip install --upgrade pip",
+    "pip install -r requirements.txt"
+]
 
 [start]
 cmd = "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT"
